--- a/KATA_project_front/src/app/header/header.component.html
+++ b/KATA_project_front/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
-    <h1>Bienvenu à Hotel-Des-Dev</h1>
+    <h1>Welcome to Hotel-Dev</h1>
     <nav>
       <a routerLink="" routerLinkActive ="active" [routerLinkActiveOptions]="{ exact : true }">Home</a>
-      <a routerLink="users" routerLinkActive="active">Clients</a>
+      <a routerLink="users" routerLinkActive="active">Customers</a>
     </nav>
 </header>
