--- a/KATA_project_front/src/app/components/edit-user/edit-user.component.html
+++ b/KATA_project_front/src/app/components/edit-user/edit-user.component.html
@@ -5,7 +5,7 @@
 <h1>Edit Information Of User</h1>
 <fieldset>
   <input id="firstName" name="firstName" formControlName="firstName" placeholder="FirstName" autofocus="" required=""/>
-  <input id="firstName" name="lastName" formControlName="lastName" placeholder="FirstName" autofocus="" required=""/>
+  <input id="firstName" name="lastName" formControlName="lastName" placeholder="LastName" autofocus="" required=""/>
   <div class="btn"><button class="btnSubmit" type="submit" [disabled]="userForm.invalid || !userForm.dirty">Submit</button>
  <a href="#"><button id="btnBack">Back</button></a></div>
 </fieldset>
