--- a/KATA_project_front/src/app/components/users-list/users-list.component.html
+++ b/KATA_project_front/src/app/components/users-list/users-list.component.html
@@ -20,7 +20,7 @@
               <td>{{user.lastName}}</td>
               <td>
                 <a class="edit" title="Edit" data-toggle="tooltip" (click)="editUser(user)"><i class="material-icons" >&#xE254;</i></a>
-                <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                <a class="delete" title="Delete" data-toggle="tooltip" (click)="deleteUser(user)"><i class="material-icons">&#xE872;</i></a>
               </td>
             </tr>
           </tbody>
