implement Add new customer

--- a/KATA_project_front/src/app/header/header.component.html
+++ b/KATA_project_front/src/app/header/header.component.html
@@ -3,5 +3,6 @@
     <nav>
       <a routerLink="" routerLinkActive ="active" [routerLinkActiveOptions]="{ exact : true }">Home</a>
       <a routerLink="users" routerLinkActive="active">Customers</a>
+      <a routerLink="rooms" routerLinkActive="active">Rooms</a>
     </nav>
 </header>
