--- a/KATA_project_front/src/app/components/edit-user/edit-user.component.html
+++ b/KATA_project_front/src/app/components/edit-user/edit-user.component.html
@@ -1,8 +1,6 @@
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600' rel='stylesheet' type='text/css'>
-
 <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
 <div class="box">
-<h1>Edit Information Of User</h1>
+<h1>Edit Information Of Cusomer</h1>
 <fieldset>
   <input id="firstName" name="firstName" formControlName="firstName" placeholder="FirstName" autofocus="" required=""/>
   <input id="firstName" name="lastName" formControlName="lastName" placeholder="LastName" autofocus="" required=""/>
@@ -11,5 +9,3 @@
 </fieldset>
 </div>
 </form>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
-
