--- a/KATA_project_front/src/app/components/users-list/users-list.component.css
+++ b/KATA_project_front/src/app/components/users-list/users-list.component.css
@@ -199,5 +199,32 @@ table.table td a.delete {
 }
 h1{
   text-align: center;
+  position: absolute;
+  top: 11px;
+  left: 50%;
+}
+.container {
+  position: relative;
+}
+
+.add-customer-button {
+  position: absolute;
+  top: -50px;
+  right: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  background-color: #3498db;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.add-customer-button:hover {
+  background-color: #2980b9;
 }
   
