--- a/KATA_project_front/src/app/components/users-list/users-list.component.html
+++ b/KATA_project_front/src/app/components/users-list/users-list.component.html
@@ -3,7 +3,7 @@
   <section class="main">
     <section class="users">
       <div class="users-list">
-        <h1>Customers List</h1> 
+        <h1>Customers </h1> 
         <p class="container">
           <a class="add-customer-button" title="Add New Customer" data-toggle="tooltip" (click)="addUser()">Add New Customer</a>
          </p>
