--- a/KATA_project_front/src/app/components/confirm-dialog/confirm-dialog.component.html
+++ b/KATA_project_front/src/app/components/confirm-dialog/confirm-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Confirm Deletion</h1>
 <div mat-dialog-content>
-  Are you sure you want to delete this user?
+  Are you sure you want to delete?
 </div>
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="false">No</button>
