--- a/KATA_project_front/src/app/components/rooms-list/rooms-list.component.html
+++ b/KATA_project_front/src/app/components/rooms-list/rooms-list.component.html
@@ -5,7 +5,7 @@
       <div class="users-list">
         <h1>Rooms </h1> 
         <p class="container">
-          <a class="add-customer-button" title="Add New Room" data-toggle="tooltip">Add New Room</a>
+          <a class="add-customer-button" title="Add New Room" data-toggle="tooltip" (click)="addRoom()">Add New Room</a>
          </p>
         <table class="table">
           <thead>
@@ -20,8 +20,8 @@
               <td>{{room.id}}</td>
               <td>{{room.roomName}}</td>
               <td>
-                <a class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons" >&#xE254;</i></a>
-                <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                <a class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons" (click)="editRoom(room)">&#xE254;</i></a>
+                <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons" (click)="deleteUser(room)">&#xE872;</i></a>
               </td>
             </tr>
           </tbody>
