Correct Function Name

--- a/KATA_project_front/src/app/components/rooms-list/rooms-list.component.html
+++ b/KATA_project_front/src/app/components/rooms-list/rooms-list.component.html
@@ -21,7 +21,7 @@
               <td>{{room.roomName}}</td>
               <td>
                 <a class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons" (click)="editRoom(room)">&#xE254;</i></a>
-                <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons" (click)="deleteUser(room)">&#xE872;</i></a>
+                <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons" (click)="deleteRoom(room)">&#xE872;</i></a>
               </td>
             </tr>
           </tbody>
