Implement Booking List and delete booking

--- a/KATA_project_front/src/app/header/header.component.html
+++ b/KATA_project_front/src/app/header/header.component.html
@@ -4,5 +4,6 @@
       <a routerLink="" routerLinkActive ="active" [routerLinkActiveOptions]="{ exact : true }">Home</a>
       <a routerLink="users" routerLinkActive="active">Customers</a>
       <a routerLink="rooms" routerLinkActive="active">Rooms</a>
+      <a routerLink="bookings" routerLinkActive="active">Bookings</a>
     </nav>
 </header>
