Implement add Booking

--- a/KATA_project_front/src/app/components/add-booking/add-booking.component.html
+++ b/KATA_project_front/src/app/components/add-booking/add-booking.component.html
@@ -2,16 +2,18 @@
     <div class="box">
     <h1>Edit Information Of Booking</h1>
     <fieldset>
-      <select id="roomId" name="roomId" required="">
-        <option *ngFor="let room of rooms" [value]="room.id">{{ room.roomName }}</option>
-    </select>
-    <select id="personId" name="personId" required="">
+      <select id="roomId" name="roomId" formControlName="roomId" required>
+        <option value="" disabled selected>Select a room</option>
+          <option *ngFor="let room of rooms" [ngValue]="room.id">{{ room.roomName }}</option>
+      </select>
+    <select id="personId" name="personId" formControlName="personId" required>
+      <option value="" disabled selected>Select a Customer</option>
       <option *ngFor="let user of users" [value]="user.id">{{ user.lastName }}</option>
     </select>     
       <input id="bookingDate" name="bookingDate" formControlName="bookingDate" type="date" type="date" placeholder="bookingDate" autofocus="" required=""/>
       <input id="startSlot" name="startSlot" formControlName="startSlot" placeholder="startSlot" type="number" autofocus="" required=""/>
       <input id="endSlot" name="endSlot" formControlName="endSlot" placeholder="endSlot" type="number" autofocus="" required=""/>
-      <div class="btn"><button class="btnSubmit" type="submit" [disabled]="bookingForm.invalid || !bookingForm.dirty">Submit</button>
+      <div class="btn"><button class="btnSubmit" type="submit">Submit</button>
      <a><button id="btnBack" (click)="backHome()">Back</button></a></div>
     </fieldset>
     </div>
