Format date for booking

--- a/KATA_project_front/src/app/components/bookings-list/bookings-list.component.html
+++ b/KATA_project_front/src/app/components/bookings-list/bookings-list.component.html
@@ -22,7 +22,7 @@
             <tr *ngFor="let booking of bookings" class="active">
               <td>{{booking.roomId}}</td>
               <td>{{booking.personId}}</td>
-              <td>{{booking.bookingDate}}</td>
+              <td>{{booking.bookingDate | date: 'yyyy-MM-dd'}}</td>
               <td>{{booking.startSlot}}</td>
               <td>{{booking.endSlot}}</td>
               <td>
