Implement Update in Booking

--- a/KATA_project_front/src/app/components/add-booking/add-booking.component.html
+++ b/KATA_project_front/src/app/components/add-booking/add-booking.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="bookingForm" (ngSubmit)="onSubmit()">
     <div class="box">
-    <h1>Edit Information Of Booking</h1>
+    <h1>Add Information Of Booking</h1>
     <fieldset>
       <select id="roomId" name="roomId" formControlName="roomId" required>
         <option value="" disabled selected>Select a room</option>
